--- a/static/style.css
+++ b/static/style.css
@@ -7,14 +7,47 @@
     font-weight: 400;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    padding: 0px; 
+    outline: none;
+    border: 0px;
+}
+
 h1, h2, h3 {
     font-family: 'Lexend', sans-serif;
 }
 
 h1 {
     font-weight: 700;
+    font-size: 100px;
+    margin: 30px 0px;
 }
 
-h2, h3 {
+h2 {
     font-weight: 500;
+}
+
+h3 {
+    font-weight: 500;
+    font-size: 25px;
+    margin-top: 0px;
+}
+
+#header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: #131313;
+    color: whitesmoke;
+    padding: 40px 0px;
+}
+
+.code-pop {
+    font-style: italic;
+    color: rgb(192, 29, 192);
+    font-weight: 900;
 }
