--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,8 @@
     <div id="scraped-content">
         {% block content %}{{content | safe}}{% endblock %}
     </div>
+    <div id="footer">
+        <p>Dames of Code is created and maintained by Cleo Kent.</p>
+    </div>
 </body>
 </html>
