--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         {% block content %}{{content | safe}}{% endblock %}
     </div>
     <div id="footer">
-        <p>Dames of Code is created and maintained by Cleo Kent.</p>
+        <p>Dames of Code is created and maintained by <span id="name-pop">{Cleo Kent}</span></p>
     </div>
 </body>
 </html>
